kubernetes/apps/default/librechat/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: librechat
spec:
  hostnames:
    - librechat.hades.casa
    - chat.hades.casa
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: librechat-librechat
          port: 3080
